--- a/crud-app/server/.env
+++ b/crud-app/server/.env
@@ -1,2 +1,2 @@
 PORT=8000
-MONGOURL="mongodb+srv://chakrateja70:21811A4226@cluster0.xu5qq6y.mongodb.net/crudApp?retryWrites=true&w=majority&appName=Cluster0"
+MONGOURL="mongodb+srv://<username>:<password>@cluster0.xu5qq6y.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
